[package]
name = "win-msgbox"
description = "This crate provides a fully featured, ergonomic interface to Windows' MessageBox"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nerixyz/win-msgbox"
keywords = ["windows", "messagebox", "message-box", "dialogbox", "dialog-box"]
categories = ["gui", "os"]
authors = ["Nerixyz"]

[dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
